# pgpm-boilerplates

./: .boilerplates.json  .gitignore  README.md  package.json  tsconfig.json
default/module/: .boilerplate.json  README.md  package.json
default/workspace/: .boilerplate.json  LICENSE  README.md  lerna.json  package.json
default/workspace/.github/: ci.yaml
default/workspace/.github/workflows/: ci.yml
extensions/c/: .boilerplate.json  .gitignore  Makefile  README.md  ____moduleName____.control
extensions/c/expected/: ____moduleName____.out
extensions/c/sql/: ____moduleName____--0.1.0.sql  ____moduleName____.sql
extensions/c/src/: ____moduleName____.c
extensions/rust/: .gitignore  Cargo.toml  Makefile  README.md
extensions/rust/src/: lib.rs
extensions/workspace/: .boilerplate.json  .gitignore  Makefile  README.md  package.json  pgpm.json
extensions/workspace/.github/workflows/: ci.yml
module/: .questions.json  README.md  package.json
pnpm/module/: .boilerplate.json
pnpm/workspace/: .boilerplate.json
scripts/: find-placeholders.ts  update-deps.ts
workspace/: .questions.json  LICENSE  README.md  lerna.json  package.json
